// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an error if the authentication error is passed 1`] = `
<section
  className="LoginForm"
>
  <div
    className="LoginForm__container padding-v-bigger bg-skew"
  >
    <div
      className="container container-tiny"
    >
      <div
        className="alert alert-error margin-c"
        role="alert"
      >
        An error occured during authentication. Troubleshooting:
        <ul>
          <li>
            Check that the namespace and secret name of the target cluster in the URL are correct.
          </li>
          <li>
            Check that the target cluster is reachable.
          </li>
          <li>
            Check that your token is valid on the target cluster.
          </li>
        </ul>
      </div>
    </div>
    <div
      className="bg-skew__pattern bg-skew__pattern-dark type-color-reverse"
    >
      <div
        className="container"
      >
        <h2>
          <Lock
            color="currentColor"
            size="24"
          />
           Login
        </h2>
        <p>
          Authentication failed.
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`does not render the token login form 1`] = `
<section
  className="LoginForm"
>
  <div
    className="LoginForm__container padding-v-bigger bg-skew"
  >
    <div
      className="container container-tiny"
    />
    <div
      className="bg-skew__pattern bg-skew__pattern-dark type-color-reverse"
    >
      <div
        className="container"
      >
        <h2>
          <Lock
            color="currentColor"
            size="24"
          />
           Login
        </h2>
        <p>
          Authentication failed.
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`while authenticating loading spinner matches the snapshot 1`] = `
<LoadingWrapper
  loaded={false}
  type={0}
/>
`;
